--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,266 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Miami</title>
-    <link rel="stylesheet" href="./styles/main.scss">
-    <script src="scripts/main.js" defer></script>
+    <title>BOSE</title>
+    <link rel="stylesheet" href="./styles/style.scss">
+    <link rel="icon" href="/src/image/image 4.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Landing Page</h1>
+  <body class="page__body">
+    <header class="header">
+      <div class="container">
+        <div class="header__content">
+          <div class="top-bar">
+            <a href="#">
+              <img
+                class="header__logo"
+                src="./image/header-logo.png"
+                alt="header-logo">
+            </a>
+            <div class="top-bar__icons">
+              <a href="tel:+1 234 5555-55-55" class="top-bar__ico">
+                <img
+                  class="top-bar__icon top-bar__icon-call"
+                  src="./image/Icon-Phone-call.png"
+                  alt="header-logo">
+              </a>
+              <a href="#menu">
+                <img
+                  href="#menu"
+                  class="top-bar__icon top-bar__icon-burger"
+                  src="./image/Icon-Burger-menu.png"
+                  alt="header-logo">
+              </a>
+            </div>
+          </div>
+          <div class="bottom-bar">
+            <h1 class="bottom-bar__text">Bring joy back to the everyday</h1>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <aside class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__top top-bar">
+          <a href="#">
+            <img
+              class="header__logo"
+              src="./image/header-logo.png"
+              alt="header-logo">
+          </a>
+          <div class="top-bar__icons">
+            <a href="#">
+              <img
+                class="top-bar__icon top-bar__icon-close"
+                src="./image/Icon-close.png"
+                alt="header-logo">
+            </a>
+          </div>
+        </div>
+
+        <div class="menu__bottom">
+          <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a class="nav__link" href="#recommended">Products</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#categories">Store</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#how-to-buy">Login</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#contacts">Cart(0)</a>
+              </li>
+            </ul>
+          </nav>
+
+          <div class="menu__contacts">
+            <a href="tel: +1 234 5555-55-55" class="menu__phone-number">+1 234 5555-55-55</a>
+            <a href="tel: +1 234 5555-55-55" class="menu__call-to-order">call to order</a>
+          </div>
+
+          <div class="theme-switcher"></div>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main">
+      <div class="main__content">
+        <div class="container">
+          <section class="recommended" id="recommended">
+            <h2 class="recommended__title">Recommended</h2>
+            <div class="recommended__content">
+              <article class="recommended__card">
+                <img
+                  class="recommended__card-img"
+                  src="./image/phone.png"
+                  alt="phone"
+                >
+                <h3 class="recommended__card-title">Phone (1)</h3>
+                <p class="recommended__card-text recommended__card-text-r">Through the Glyph Interface, a perfected OS and exceptional dual camera. All startlingly fast.</p>
+                <p class="recommended__card-price">$ 499.00</p>
+              </article>
+              <article class="recommended__card">
+                <img
+                  class="recommended__card-img"
+                  src="./image/ear.png" alt="phone">
+                <h3 class="recommended__card-title">Ear (2)</h3>
+                <p class="recommended__card-text recommended__card-text-t">Perfecting the path from artist to ear. So that music sounds just as it was intended.</p>
+                <p class="recommended__card-price">$ 149.00</p>
+              </article>
+              <article class="recommended__card">
+                <img
+                  class="recommended__card-img"
+                  src="./image/ear-stick.png"
+                  alt="phone"
+                >
+                <h3 class="recommended__card-title">Ear (stick)</h3>
+                <p class="recommended__card-text">Tech you can’t feel. Leaving just space for sound to come to life. Powered by custom sound technology.</p>
+                <p class="recommended__card-price">$ 119.00</p>
+              </article>
+            </div>
+          </section>
+        </div>
+        <div class="container">
+          <section class="categories" id="categories">
+            <h2 class="categories__title">Browse Nothing products by category</h2>
+            <div class="categories__content">
+              <article class="category">
+                <div class="category__photos">
+                  <a href="#" class="category__photo-wide">
+                    <img
+                      class="category__photo"
+                      src="./image/bird.png"
+                      alt="bird">
+                  </a>
+                  <a href="#" class="category__photo-squre">
+                    <img
+                      class="category__photo"
+                      src="./image/dird-two.png"
+                      alt="dird-two">
+                  </a>
+                </div>
+                <h3 class="category__title">All products</h3>
+              </article>
+              <article class="category">
+                <div class="category__photos">
+                  <a href="#" class="category__photo-squre">
+                    <img
+                      class="category__photo"
+                      src="./image/Image (29).png"
+                      alt="bird">
+                  </a>
+                  <a href="#" class="category__photo-wide">
+                    <img
+                      class="category__photo"
+                      src="./image/Image (30).png"
+                      alt="dird-two">
+                  </a>
+                </div>
+                <h3 class="category__title">Audio</h3>
+              </article>
+              <article class="category">
+                <div class="category__photos">
+                  <a href="#" class="category__photo-wide">
+                    <img
+                      class="category__photo"
+                      src="./image/Image (31).png"
+                      alt="bird">
+                  </a>
+                  <a href="#" class="category__photo-squre">
+                    <img
+                      class="category__photo"
+                      src="./image/Image (32).png"
+                      alt="dird-two">
+                  </a>
+                </div>
+                <h3 class="category__title">Accessories</h3>
+              </article>
+            </div>
+            <div class="categories__button-grid">
+              <button class="categories__button button">View all</button>
+            </div>
+          </section>
+        </div>
+
+        <section class="how-to-buy" id="how-to-buy">
+          <div class="how-to-buy__image"></div>
+
+          <div class="container">
+            <div class="how-to-buy__wrapper">
+              <h2 class="how-to-buy__title">About us</h2>
+              <p class="how-to-buy__text">We’re a London-based tech company on a mission to remove barriers between people and technology. <br> <br>
+                To do this, we’re crafting intuitive, flawlessly connected products that improve our lives without getting in the way.
+                No confusing tech-speak. No silly product names. Just artistry, passion and trust. And products we’re proud to share with our friends and family. Simple. <br> <br>
+                Because beautiful tech shouldn’t be complicated.
+              </p>
+            </div>
+          </div>
+        </section>
+
+        <section class="contacts" id="contacts">
+          <div class="container">
+            <h2 class="contacts__title">Contact us</h2>
+
+            <div class="contacts__wrapper">
+              <form
+                class="contacts__input"
+                method="post"
+                onsubmit="this.reset(); return false"
+              >
+                <input
+                  class="contacts__input-name"
+                  type="text"
+                  placeholder="Name"
+                  required
+                >
+                <input
+                  class="contacts__input-email"
+                  type="email"
+                  placeholder="Email"
+                  required
+                >
+                <textarea
+                  class="contacts__input-textarea"
+                  placeholder="Message"
+                  required
+                ></textarea>
+
+                <button class="contacts__button button" type="submit">Send</button>
+              </form>
+
+              <div class="contacts__contact contact">
+                <div class="contact__phone">
+                  <p class="contact__address-transparent">Phone</p>
+                  <a href="tel: +1 234 5555-55-55" class="contact__address-base">+1 234 5555-55-55</a>
+                </div>
+
+                <div class="contact__email">
+                  <p class="contact__address-transparent">Email</p>
+                  <a href="mailto:hello@nothing.com" class="contact__address-base">hello@nothing.com</a>
+                </div>
+
+                <div class="contact__address">
+                  <p class="contact__address-transparent">Address</p>
+                  <a href="https://www.google.com/maps/place/400+first+ave.+suite+700+Minneapolis,+MN+55401" target="_blank">
+                    <p class="contact__address-base">400 first ave. <br> suite 700 <br> Minneapolis, MN 55401</p>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
+    <script type="module" src="scripts/main.js" ></script>
+
   </body>
 </html>
